--- a/smart-companion/package.json
+++ b/smart-companion/package.json
@@ -14,7 +14,10 @@
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
+    "react-confetti": "^6.4.0",
     "react-dom": "19.2.3",
+    "react-router-dom": "^7.13.0",
+    "react-use": "^17.6.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
